src/content/ccip/api-reference/evm/v1.6.2/lock-release-token-pool.mdx
---
section: ccip
date: Last Modified
title: "CCIP v1.6.2 LockReleaseTokenPool Contract API Reference"
metadata:
  description: "API documentation for the LockReleaseTokenPool contract in Chainlink CCIP v1.6.2, implementing lock/release functionality for tokens on their native chain."
---

import { Aside } from "@components"
import CcipCommon from "@features/ccip/CcipCommon.astro"

<CcipCommon callout="importCCIPPackage162" />

## LockReleaseTokenPool

A specialized token pool for managing native tokens through a lock and release mechanism, with support for liquidity management.

[Git Source](https://github.com/smartcontractkit/chainlink-ccip/tree/contracts-ccip-v1.6.1/chains/evm/contracts/pools/LockReleaseTokenPool.sol)

**Inherits:**

- [TokenPool](/ccip/api-reference/evm/v1.6.2/token-pool)
- [ITypeAndVersion](/ccip/api-reference/evm/v1.6.2/i-type-and-version)

<Aside>

A token pool designed for native chain tokens with the following features:

- Manages one token per pool instance
- Implements lock and release mechanisms for cross-chain transfers
- Provides liquidity management functions for proper balance tracking
- Supports liquidity provider operations
- Facilitates pool upgrades through liquidity transfer mechanisms

</Aside>

## Events

### LiquidityTransferred

```solidity
event LiquidityTransferred(address indexed from, uint256 amount);
```

<Aside>Emitted when liquidity is transferred from an older pool version during an upgrade.</Aside>

**Parameters**

| Name     | Type      | Indexed | Description                         |
| -------- | --------- | ------- | ----------------------------------- |
| `from`   | `address` | Yes     | The source pool address             |
| `amount` | `uint256` | No      | The amount of liquidity transferred |

### RebalancerSet

```solidity
event RebalancerSet(address oldRebalancer, address newRebalancer);
```

<Aside>Emitted when the rebalancer (liquidity manager) address is updated via [`setRebalancer`](#setrebalancer).</Aside>

**Parameters**

| Name            | Type      | Indexed | Description                            |
| --------------- | --------- | ------- | -------------------------------------- |
| `oldRebalancer` | `address` | No      | The address of the previous rebalancer |
| `newRebalancer` | `address` | No      | The address of the new rebalancer      |

## Errors

### InsufficientLiquidity

```solidity
error InsufficientLiquidity();
```

<Aside>Thrown when attempting to withdraw more liquidity than available in the pool.</Aside>

### LiquidityNotAccepted

```solidity
error LiquidityNotAccepted();
```

<Aside>Thrown when attempting to provide liquidity to a pool that doesn't accept external liquidity.</Aside>

## State Variables

### i_acceptLiquidity

```solidity
bool internal immutable i_acceptLiquidity;
```

<Aside>
  Immutable flag indicating whether the pool accepts external liquidity. This setting cannot be changed after
  deployment.
</Aside>

### s_rebalancer

```solidity
address internal s_rebalancer;
```

<Aside>The address of the current rebalancer (liquidity manager) authorized to manage pool liquidity.</Aside>

### typeAndVersion

```solidity
string public constant override typeAndVersion = "LockReleaseTokenPool 1.6.1";
```

<Aside>A constant identifier specifying the contract type and version number.</Aside>

## Functions

### canAcceptLiquidity

Determines whether the pool can accept external liquidity.

```solidity
function canAcceptLiquidity() external view returns (bool);
```

<Aside>

Returns the immutable configuration indicating if the pool accepts external liquidity. External liquidity might not be required when:

- There is one canonical token on the chain
- CCIP handles mint/burn operations on other chains
- The invariant `balanceOf(pool) on home chain >= sum(totalSupply(mint/burn "wrapped" token) on all remote chains)` is maintained

</Aside>

**Returns**

| Type   | Description                                 |
| ------ | ------------------------------------------- |
| `bool` | True if the pool accepts external liquidity |

### constructor

```solidity
constructor(
  IERC20 token,
  uint8 localTokenDecimals,
  address[] memory allowlist,
  address rmnProxy,
  bool acceptLiquidity,
  address router
) TokenPool(token, localTokenDecimals, allowlist, rmnProxy, router);
```

<Aside>

Initializes the token pool with its configuration parameters:

- Sets up the token contract reference
- Configures decimal precision for local tokens
- Establishes the initial whitelist
- Links to the RMN proxy and router
- Sets the liquidity acceptance policy

</Aside>

**Parameters**

| Name                 | Type        | Description                                 |
| -------------------- | ----------- | ------------------------------------------- |
| `token`              | `IERC20`    | The token contract to manage                |
| `localTokenDecimals` | `uint8`     | The decimal precision for the local token   |
| `allowlist`          | `address[]` | Initial list of authorized addresses        |
| `rmnProxy`           | `address`   | Address of the RMN proxy contract           |
| `acceptLiquidity`    | `bool`      | Whether the pool accepts external liquidity |
| `router`             | `address`   | Address of the router contract              |

### getRebalancer

Returns the current rebalancer address.

```solidity
function getRebalancer() external view returns (address);
```

<Aside>
  Provides the address of the current liquidity manager (rebalancer). Can return address(0) if none is configured.
</Aside>

**Returns**

| Type      | Description                           |
| --------- | ------------------------------------- |
| `address` | The current liquidity manager address |

### provideLiquidity

Adds external liquidity to the pool.

```solidity
function provideLiquidity(uint256 amount) external;
```

<Aside>

Allows the rebalancer to add liquidity to the pool:

- Requires prior token approval
- Only callable by the authorized rebalancer
- Only works if the pool accepts liquidity

</Aside>

**Parameters**

| Name     | Type      | Description                        |
| -------- | --------- | ---------------------------------- |
| `amount` | `uint256` | The amount of liquidity to provide |

### \_releaseOrMint

Internal function that implements the token release logic for a `LockReleaseTokenPool`.

```solidity
function _releaseOrMint(address receiver, uint256 amount) internal virtual override;
```

<Aside>

Overrides the virtual [`_releaseOrMint`](/ccip/api-reference/evm/v1.6.2/token-pool#_releaseormint) function from the base `TokenPool` contract:

- Provides the specific "release" implementation for the `LockReleaseTokenPool`.
- Uses `safeTransfer` to send the specified amount of tokens to the receiver.

</Aside>

**Parameters**

| Name       | Type      | Description                       |
| ---------- | --------- | --------------------------------- |
| `receiver` | `address` | The address to receive the tokens |
| `amount`   | `uint256` | The number of tokens to release   |

### setRebalancer

Updates the rebalancer address.

```solidity
function setRebalancer(address rebalancer) external onlyOwner;
```

<Aside>Allows the owner to update the liquidity manager (rebalancer) address.</Aside>

**Parameters**

| Name         | Type      | Description                       |
| ------------ | --------- | --------------------------------- |
| `rebalancer` | `address` | The new rebalancer address to set |

### transferLiquidity

Transfers liquidity from an older pool version.

```solidity
function transferLiquidity(address from, uint256 amount) external onlyOwner;
```

<Aside>

Facilitates pool upgrades by transferring liquidity from an older pool version:

- Requires this pool to be set as rebalancer in the source pool
- Can be used in conjunction with TokenAdminRegistry updates
- Supports both atomic and gradual migration strategies
- Enables smooth transition of liquidity and transactions

</Aside>

**Parameters**

| Name     | Type      | Description                         |
| -------- | --------- | ----------------------------------- |
| `from`   | `address` | The address of the source pool      |
| `amount` | `uint256` | The amount of liquidity to transfer |

### withdrawLiquidity

Removes liquidity from the pool.

```solidity
function withdrawLiquidity(uint256 amount) external;
```

<Aside>

Allows the rebalancer to withdraw liquidity:

- Only callable by the authorized rebalancer
- Requires sufficient pool balance
- Transfers tokens directly to the caller

</Aside>

**Parameters**

| Name     | Type      | Description                         |
| -------- | --------- | ----------------------------------- |
| `amount` | `uint256` | The amount of liquidity to withdraw |
